--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@ permalink: /contact/
 
   <section class='contact__imprint'>
     {% for imprint in site.data.imprint %}
-    <div class='contact__imprint hook' data-aos="fade-in" data-aos-delay='100'>
+    <div class='contact__imprint hook' data-aos="fade-in" data-aos-delay='200' data-aos-anchor-placement="top-bottom">
       <h3 class='contact__imprint-topic'>{{imprint.topic}}</h3>
       <p class='contact__imprint-text'>{{imprint.text}}</p>
     </div>
